force-app/main/default/objects/Drive_Mapping_Folder__c/Drive_Mapping_Folder__c.object-meta.xml
<CustomObject>
    <label>Drive Mapping Folder</label>
    <nameField>
        <label>Drive Mapping Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drive Mapping Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>