force-app/main/default/objects/Drive_Mapping_Folder__c/fields/Folder_Drive_Name_Without_Parent__c.field-meta.xml
<CustomField>
    <fullName>Folder_Drive_Name_Without_Parent__c</fullName>
    <label>Folder Drive Name Without Parent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>