force-app/main/default/objects/Drive_Mapping_Folder__c/fields/Salesforce_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object_ID__c</fullName>
    <label>Salesforce Object ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>