force-app/main/default/objects/Drive_Mapping_Folder__c/fields/Sub_Folder_Ids__c.field-meta.xml
<CustomField>
    <fullName>Sub_Folder_Ids__c</fullName>
    <label>Sub Folder Ids</label>
    <length>200</length>
    <type>Text</type>
</CustomField>