force-app/main/default/objects/Drive_Mapping_Folder__c/fields/SUB_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>SUB_Folder_Name__c</fullName>
    <label>SUB_Folder_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>